[package]
name = "tm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tm"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
days-in-month = "2.0.0"
itertools = "0.12.0"
pyo3 = { version = "0.19.0", features = ["chrono", "anyhow", "extension-module"] }
thiserror = "1.0.56"
