[package]
name = "tm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tm"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
futures = "0.3.30"
itertools = "0.12.0"
pyo3 = { version = "0.19.0", features = ["chrono", "anyhow", "extension-module"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"]}
tarpc = { version = "0.34", features = ["full"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
